--- a/apps/web/src/components/Motd/Motd.module.css
+++ b/apps/web/src/components/Motd/Motd.module.css
@@ -14,7 +14,6 @@
 .motdSpacer {
   flex: 1 1 auto;
   min-height: 0;
-  max-height: 40vh;
   display: flex;
 }
 .name {
